qt6/gen_qgraphicsview.h

typedef struct QBrush QBrush;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsScene QGraphicsScene;
typedef struct QGraphicsView QGraphicsView;
typedef struct QMetaObject QMetaObject;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QSize QSize;
typedef struct QTransform QTransform;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QGraphicsView* QGraphicsView_new(QWidget* parent);
QGraphicsView* QGraphicsView_new2();
QGraphicsView* QGraphicsView_new3(QGraphicsScene* scene);
QGraphicsView* QGraphicsView_new4(QGraphicsScene* scene, QWidget* parent);
QMetaObject* QGraphicsView_metaObject(const QGraphicsView* self);
void* QGraphicsView_metacast(QGraphicsView* self, const char* param1);
int QGraphicsView_metacall(QGraphicsView* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsView_tr(const char* s);
QSize* QGraphicsView_sizeHint(const QGraphicsView* self);
int QGraphicsView_renderHints(const QGraphicsView* self);
void QGraphicsView_setRenderHint(QGraphicsView* self, int hint);
void QGraphicsView_setRenderHints(QGraphicsView* self, int hints);
int QGraphicsView_alignment(const QGraphicsView* self);
void QGraphicsView_setAlignment(QGraphicsView* self, int alignment);
int QGraphicsView_transformationAnchor(const QGraphicsView* self);
void QGraphicsView_setTransformationAnchor(QGraphicsView* self, int anchor);
int QGraphicsView_resizeAnchor(const QGraphicsView* self);
void QGraphicsView_setResizeAnchor(QGraphicsView* self, int anchor);
int QGraphicsView_viewportUpdateMode(const QGraphicsView* self);
void QGraphicsView_setViewportUpdateMode(QGraphicsView* self, int mode);
int QGraphicsView_optimizationFlags(const QGraphicsView* self);
void QGraphicsView_setOptimizationFlag(QGraphicsView* self, int flag);
void QGraphicsView_setOptimizationFlags(QGraphicsView* self, int flags);
int QGraphicsView_dragMode(const QGraphicsView* self);
void QGraphicsView_setDragMode(QGraphicsView* self, int mode);
int QGraphicsView_rubberBandSelectionMode(const QGraphicsView* self);
void QGraphicsView_setRubberBandSelectionMode(QGraphicsView* self, int mode);
QRect* QGraphicsView_rubberBandRect(const QGraphicsView* self);
int QGraphicsView_cacheMode(const QGraphicsView* self);
void QGraphicsView_setCacheMode(QGraphicsView* self, int mode);
void QGraphicsView_resetCachedContent(QGraphicsView* self);
bool QGraphicsView_isInteractive(const QGraphicsView* self);
void QGraphicsView_setInteractive(QGraphicsView* self, bool allowed);
QGraphicsScene* QGraphicsView_scene(const QGraphicsView* self);
void QGraphicsView_setScene(QGraphicsView* self, QGraphicsScene* scene);
QRectF* QGraphicsView_sceneRect(const QGraphicsView* self);
void QGraphicsView_setSceneRect(QGraphicsView* self, QRectF* rect);
void QGraphicsView_setSceneRect2(QGraphicsView* self, double x, double y, double w, double h);
QTransform* QGraphicsView_transform(const QGraphicsView* self);
QTransform* QGraphicsView_viewportTransform(const QGraphicsView* self);
bool QGraphicsView_isTransformed(const QGraphicsView* self);
void QGraphicsView_setTransform(QGraphicsView* self, QTransform* matrix);
void QGraphicsView_resetTransform(QGraphicsView* self);
void QGraphicsView_rotate(QGraphicsView* self, double angle);
void QGraphicsView_scale(QGraphicsView* self, double sx, double sy);
void QGraphicsView_shear(QGraphicsView* self, double sh, double sv);
void QGraphicsView_translate(QGraphicsView* self, double dx, double dy);
void QGraphicsView_centerOn(QGraphicsView* self, QPointF* pos);
void QGraphicsView_centerOn2(QGraphicsView* self, double x, double y);
void QGraphicsView_centerOnWithItem(QGraphicsView* self, QGraphicsItem* item);
void QGraphicsView_ensureVisible(QGraphicsView* self, QRectF* rect);
void QGraphicsView_ensureVisible2(QGraphicsView* self, double x, double y, double w, double h);
void QGraphicsView_ensureVisibleWithItem(QGraphicsView* self, QGraphicsItem* item);
void QGraphicsView_fitInView(QGraphicsView* self, QRectF* rect);
void QGraphicsView_fitInView2(QGraphicsView* self, double x, double y, double w, double h);
void QGraphicsView_fitInViewWithItem(QGraphicsView* self, QGraphicsItem* item);
void QGraphicsView_render(QGraphicsView* self, QPainter* painter);
struct miqt_array /* of QGraphicsItem* */  QGraphicsView_items(const QGraphicsView* self);
struct miqt_array /* of QGraphicsItem* */  QGraphicsView_itemsWithPos(const QGraphicsView* self, QPoint* pos);
struct miqt_array /* of QGraphicsItem* */  QGraphicsView_items2(const QGraphicsView* self, int x, int y);
struct miqt_array /* of QGraphicsItem* */  QGraphicsView_itemsWithRect(const QGraphicsView* self, QRect* rect);
struct miqt_array /* of QGraphicsItem* */  QGraphicsView_items3(const QGraphicsView* self, int x, int y, int w, int h);
struct miqt_array /* of QGraphicsItem* */  QGraphicsView_itemsWithPath(const QGraphicsView* self, QPainterPath* path);
QGraphicsItem* QGraphicsView_itemAt(const QGraphicsView* self, QPoint* pos);
QGraphicsItem* QGraphicsView_itemAt2(const QGraphicsView* self, int x, int y);
QPointF* QGraphicsView_mapToScene(const QGraphicsView* self, QPoint* point);
QPainterPath* QGraphicsView_mapToSceneWithPath(const QGraphicsView* self, QPainterPath* path);
QPoint* QGraphicsView_mapFromScene(const QGraphicsView* self, QPointF* point);
QPainterPath* QGraphicsView_mapFromSceneWithPath(const QGraphicsView* self, QPainterPath* path);
QPointF* QGraphicsView_mapToScene2(const QGraphicsView* self, int x, int y);
QPoint* QGraphicsView_mapFromScene2(const QGraphicsView* self, double x, double y);
QVariant* QGraphicsView_inputMethodQuery(const QGraphicsView* self, int query);
QBrush* QGraphicsView_backgroundBrush(const QGraphicsView* self);
void QGraphicsView_setBackgroundBrush(QGraphicsView* self, QBrush* brush);
QBrush* QGraphicsView_foregroundBrush(const QGraphicsView* self);
void QGraphicsView_setForegroundBrush(QGraphicsView* self, QBrush* brush);
void QGraphicsView_updateScene(QGraphicsView* self, struct miqt_array /* of QRectF* */  rects);
void QGraphicsView_invalidateScene(QGraphicsView* self);
void QGraphicsView_updateSceneRect(QGraphicsView* self, QRectF* rect);
void QGraphicsView_rubberBandChanged(QGraphicsView* self, QRect* viewportRect, QPointF* fromScenePoint, QPointF* toScenePoint);
void QGraphicsView_connect_rubberBandChanged(QGraphicsView* self, intptr_t slot);
struct miqt_string QGraphicsView_tr2(const char* s, const char* c);
struct miqt_string QGraphicsView_tr3(const char* s, const char* c, int n);
void QGraphicsView_setRenderHint2(QGraphicsView* self, int hint, bool enabled);
void QGraphicsView_setOptimizationFlag2(QGraphicsView* self, int flag, bool enabled);
void QGraphicsView_setTransform2(QGraphicsView* self, QTransform* matrix, bool combine);
void QGraphicsView_ensureVisible22(QGraphicsView* self, QRectF* rect, int xmargin);
void QGraphicsView_ensureVisible3(QGraphicsView* self, QRectF* rect, int xmargin, int ymargin);
void QGraphicsView_ensureVisible5(QGraphicsView* self, double x, double y, double w, double h, int xmargin);
void QGraphicsView_ensureVisible6(QGraphicsView* self, double x, double y, double w, double h, int xmargin, int ymargin);
void QGraphicsView_ensureVisible23(QGraphicsView* self, QGraphicsItem* item, int xmargin);
void QGraphicsView_ensureVisible32(QGraphicsView* self, QGraphicsItem* item, int xmargin, int ymargin);
void QGraphicsView_fitInView22(QGraphicsView* self, QRectF* rect, int aspectRadioMode);
void QGraphicsView_fitInView5(QGraphicsView* self, double x, double y, double w, double h, int aspectRadioMode);
void QGraphicsView_fitInView23(QGraphicsView* self, QGraphicsItem* item, int aspectRadioMode);
void QGraphicsView_render2(QGraphicsView* self, QPainter* painter, QRectF* target);
void QGraphicsView_render3(QGraphicsView* self, QPainter* painter, QRectF* target, QRect* source);
void QGraphicsView_render4(QGraphicsView* self, QPainter* painter, QRectF* target, QRect* source, int aspectRatioMode);
struct miqt_array /* of QGraphicsItem* */  QGraphicsView_items22(const QGraphicsView* self, QRect* rect, int mode);
struct miqt_array /* of QGraphicsItem* */  QGraphicsView_items5(const QGraphicsView* self, int x, int y, int w, int h, int mode);
struct miqt_array /* of QGraphicsItem* */  QGraphicsView_items24(const QGraphicsView* self, QPainterPath* path, int mode);